--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>emir2MİNN</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- maintenance / announcement banners -->
@@ -187,6 +187,7 @@
 
   <div id="toastContainer" aria-live="polite"></div>
 
-  <script src="app.js" defer></script>
+  <script src="script.js" defer></script>
 </body>
+
 </html>
