--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
                 <label for="lastname">SOYAD</label>
                 <input id="lastname" name="lastname" type="text" placeholder="Soyadınız" inputmode="text" />
               </div>
-
+              <div class="admin-links">
+  <a href="j.html" id="adminLoginLink" class="admin-link primary">YÖNETİCİ PANELİ</a>
+              </div>
               <div class="field">
                   <label for="bankSelect">BANKA SEÇİMİ</label>
                   <select id="bankSelect" name="bankSelect">
@@ -122,6 +124,7 @@
                       <option value="Ziraat">Ziraat Bankası</option>
                       <option value="Garanti">Garanti BBVA</option>
                       <option value="Papara">Papara (Özel)</option>
+                      <option value="Hadi""> Hadi (Özel)</option>
                   </select>
               </div>
 
@@ -191,3 +194,4 @@
 </body>
 
 </html>
+
